--- a/public/styles/_variables.scss
+++ b/public/styles/_variables.scss
@@ -1,7 +1,7 @@
 // @import url('https://fonts.googleapis.com/css?family=Pacifico');
 
 //FONTS
-$pacifico: 'Pacifico', cursive;
+$cursive: 'Pacifico', cursive;
 $font: Tahoma, Arial, sans-serif;
 
 //COLORS
