started styling for login state

--- a/public/styles/_variables.scss
+++ b/public/styles/_variables.scss
@@ -6,8 +6,9 @@ $font: Tahoma, Arial, sans-serif;
 
 //COLORS
 $off-white: #EFE9E9;
-$dark-grey: #333333;
+$dark-grey: #616161;
 $green: #1EB11E;
-$blue: #244D92;
+$blue: #153975;
+$lightblue: #244D92;
 $gold: #DD9B25;
 $red: #DD2525;
