--- a/public/styles/routes/_login.scss
+++ b/public/styles/routes/_login.scss
@@ -1,15 +1,95 @@
-.background {
-  width: 100%;
-  height: 100vh;
-@include image('../../../images/login.jpg');
-  // background-color: darkseagreen;
-}
-.test2 {
-color: tomato;
-}
+.all {
+  -webkit-font-smoothing: antialiased;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  position: relative;
 
-// .testImage {
-//   height: 50px;
-//   width: 50px;
-//   background-image:
-// }
+  .overlay {
+    width: 100%;
+    height: 100vh;
+    background: rgba(0, 0, 0, .65);
+    position: absolute;
+  }
+  .background {
+    width: 100%;
+    height: 100vh;
+    @include image('../../../images/login.jpg');
+    @include flex(center, center);
+    position: relative;
+  }
+  /////////////////////////// LOGIN ///////////////////////////
+  .login {
+    @include flex(flex-start, center);
+    width: 550px;
+    height: 50px;
+    background-color: $green;
+    color: $off-white;
+    float: right;
+    padding-left: 5px;
+  }
+
+  .input {
+    @include wxh(200px, 25px);
+    font-family: $font;
+    font-size: 15px;
+    background-color: $off-white;
+    color: #000;
+    border: 0px solid;
+    outline: none;
+    text-indent: 10px;
+    margin: 10px;
+  }
+
+  .input::-webkit-input-placeholder {
+  color: $green !important;
+  font-size: 12px;
+  }
+
+  .input:-moz-placeholder { /* Firefox 18- */
+  color: $green !important;
+  font-size: 12px;
+  }
+
+  .input::-moz-placeholder {  /* Firefox 19+ */
+  color: $green !important;
+  font-size: 12px;
+  }
+
+  .input:-ms-input-placeholder {
+  color: $green !important;
+  font-size: 12px;
+  }
+
+  .button {
+    @include wxh(80px, 35px);
+    background-color: $blue;
+    color: #fff;
+    border: 1px solid transparent;
+    font-size: 15px;
+    margin-left: 10px;
+  }
+
+  .button:hover {
+    background-color: $lightblue;
+  }
+  /////////////////////////// CONTAINER ///////////////////////////
+  .container {
+    @include flex(center, center);
+    width: 90%;
+    height: 90%;
+    background-color: darkseagreen;
+    margin: auto;
+
+  }
+
+  .red {
+    @include wxh(50%, 630px);
+    background-color: red;
+  }
+
+  .blue {
+    @include wxh(50%, 630px);
+    background-color: blue;
+  }
+}
