--- a/public/styles/_variables.scss
+++ b/public/styles/_variables.scss
@@ -6,9 +6,13 @@ $font: Tahoma, Arial, sans-serif;
 
 //COLORS
 $off-white: #EFE9E9;
+$off-black: #333;
 $dark-grey: #616161;
 $green: #1EB11E;
+$light-green: #3FBD3F;
 $blue: #153975;
 $lightblue: #244D92;
 $gold: #DD9B25;
 $red: #DD2525;
+
+//INPUT FIELDS
