--- a/public/styles/routes/_login.scss
+++ b/public/styles/routes/_login.scss
@@ -88,12 +88,13 @@
     text-align: center;
     color: $off-white;
     margin-bottom: 15px;
+    margin-right: 30px;
   }
 
   .logo {
     @include image('../../../images/logo-off-white.png');
     @include wxh(100px, 58px);
-    margin: auto;
+    margin-left: 156px;
   }
 
   .description {
@@ -104,6 +105,7 @@
     width: 92%;
     line-height: 63px;
     margin-top: 15px;
+    margin-right: 32px;
   }
   /////////////////////////// RIGHT ///////////////////////////
   .right-title {
@@ -143,7 +145,7 @@
 
   .block {
     display: inline-block;
-    @include wxh(auto, 62%);
+    @include wxh(440px, 440px);
     // background-color: salmon;
   }
 
