set up header directive

--- a/public/styles/reference.scss
+++ b/public/styles/reference.scss
@@ -4,6 +4,7 @@
 
 //VIEWS
 @import "routes/login";
+@import "routes/headerTmpl";
 
 //FONTS
 @import url('https://fonts.googleapis.com/css?family=Pacifico');
