--- a/public/styles/reference.scss
+++ b/public/styles/reference.scss
@@ -4,6 +4,8 @@
 
 //VIEWS
 @import "routes/login";
+@import "routes/home";
+@import "routes/headerDirective";
 
 //FONTS
 @import url('https://fonts.googleapis.com/css?family=Pacifico');
