--- a/public/styles/routes/_headerDirective.scss
+++ b/public/styles/routes/_headerDirective.scss
@@ -1,34 +1,57 @@
-.george {
-  width: 100px;
-  height: 100px;
-  background-color: black;
-  color: red;
-}
-
 .header {
-  // position: absolute;
-  @include wxh(100vw, 75px);
+  position: relative;
+  @include wxh(100vw, 100px);
   background-color: $green;
+  display: flex;
+  flex-direction: column;
 }
 
 .welcome {
-  position: absolute;
-  @include wxh(400px, 75px);
-  @include flex(flex-start, center);
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  height: 75px;
+  // @include wxh(300px, 75px);
+  // @include flex(center, center);
   font-family: $font;
   font-size: 20px;
   color: $off-white;
-  background-color: orangered;
+  // background-color: orangered;
+  margin-left: 15px;
 }
 
 .user-photo {
-  width: 160px;
-  height: 160px;
-  padding: 0px;
-  border: 2px solid $blue;
-  border-radius: 100px;
-  -moz-border-radius: 100px;
-  -webkit-border-radius: 100px;
+  display: inline-block;
+  width: 60px;
+  max-height: 60px;
+  border-radius: 50%;
+  margin: 0 10px 0 10px;
+  overflow: hidden;
+}
+
+.user-photo img {
+  max-width: 100%;
+}
+
+.checkpoint {
+  width: 300px;
   position: relative;
-  top: 187px;
+  font-family: $font;
+  font-size: 15px;
+  color: $off-white;
+  background-color: $blue;
+  text-align: center;
+}
+
+.bo {
+  display: flex;
+  flex-display: column;
+}
+
+.chelsea {
+  @include flex(center, center);
+  color: $off-white;
+  font-family: $font;
+  font-size: 15px;
+  margin-left: 15px;
 }
