--- a/public/styles/routes/_home.scss
+++ b/public/styles/routes/_home.scss
@@ -55,6 +55,7 @@
     font-size: 20px;
     padding-left: 14px;
   }
+
   .button:hover {
     background-color: $light-green;
   }
@@ -89,6 +90,160 @@
     overflow: hidden;
     display: inline-flex;
     transition: max-height 0.2s ease-out;
+  }
+  //********************************** MODAL **********************************//
+  // MODAL
+
+  .modal-bg {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    background-color: rgba(0, 0, 0, .85);
+    top: 0px;
+    @include wxh(100%, 100vh);
+    @include flex(center, center);
+    flex-direction: column;
+  }
+////////MAKING X///////////
+  .left {
+    z-index: 3;
+    width: 2px;
+    height: 50px;
+    background-color: #fff;
+    position: absolute;
+    cursor: pointer;
+    transform: rotate(45deg);
+  }
+
+  .right {
+    z-index: 4;
+    width: 2px;
+    height: 50px;
+    background-color: #fff;
+    position: absolute;
+    cursor: pointer;
+    transform: rotate(-45deg);
+  }
+
+
+  //CONTENT
+  .modal-content {
+    display: inline-block;
+    z-index: 4;
+    position: relative;
+    max-width: 92vw;
+    margin: 4vh 4vw;
+    margin-top: 60px;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0;
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s;
+  }
+
+  .close-container {
+    height: 50px;
+    position: relative;
+    @include flex(flex-end, center);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s;
+  }
+
+  .x-box {
+    // z-index: 2;
+    @include wxh(50px, 50px);
+    position: absolute;
+    bottom: 10px;
+    @include flex(center, center);
+    cursor: pointer;
+  }
+  //HEADER
+  .modal-header {
+      padding: 30px;
+      background-color: #fff;
+      color: #000;
+      font-family: $font;
+      font-weight:bold;
+      font-size: 18px;
+      text-transform: uppercase;
+      text-align: center;
+  }
+
+  //BODY
+  .modal-body {
+    color: #333;
+    font-family: $font;
+    font-size: 15px;
+    text-align: center;
+    line-height: 23px;
+    border-bottom: 2px solid #f8f8f8;
+    border-top: 2px solid #f8f8f8;
+    background: #fff;
+    padding: 30px;
+  }
+
+  //FOOTER
+  .modal-footer {
+    padding: 30px;
+    background-color: #fff;
+    @include flex(center, center);
+  }
+
+  .button {
+    @include wxh(120px, 45px);
+    @include flex(center, center);
+    font-family: $font;
+    font-size: 20px;
+    text-transform: uppercase;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    letter-spacing: .1em;
+    border-radius: 5px;
+    border-width: 2px;
+    white-space: normal;
+    margin: 2px;
+    cursor: none;
+    outline: 0;
+  }
+
+  .cancel {
+    background-color: #5cb85c;
+    color: #fff;
+    border-color: #4cae4c;
+    border-style: solid;
+  }
+
+  .cancel:hover {
+    background-color: #80c780;
+    color: #fff;
+    border-color: #6ec06e;
+    border-style: solid;
+
+  }
+
+  .login {
+    background-color: #fff;
+    color: $blue;
+    border-color: $blue;
+    border-style: solid;
+
+  }
+
+  .login:hover {
+    color: #03b8ff;
+    border-color: #03b8ff;
+    border-style: solid;
+
+  }
+
+  .ham-to-x {
+    @include wxh(50px, 50px);
+    background-color: red;
   }
 
 
