--- a/public/styles/routes/_home.scss
+++ b/public/styles/routes/_home.scss
@@ -168,11 +168,11 @@
   .modal-header {
       padding: 30px;
       background-color: $off-white;
-      color: #000;
+      color: $off-black;
       font-family: $font;
-      font-weight:bold;
-      font-size: 18px;
-      text-transform: uppercase;
+      // font-weight:bold;
+      font-size: 30px;
+      // text-transform: uppercase;
       text-align: center;
   }
 
