--- a/public/styles/routes/_home.scss
+++ b/public/styles/routes/_home.scss
@@ -196,13 +196,17 @@
     @include flex(center, center);
   }
 
-  .employee_photo {
+  .employee-photo {
     display: inline-block;
-    width: 125px;
-    max-height: 125px;
+    width: 150px;
+    max-height: 150px;
     border-radius: 50%;
     margin: 0 10px 0 10px;
     overflow: hidden;
+  }
+
+  .employee-photo img {
+    max-width: 100%;
   }
 
 
