adminHome for admins only

--- a/public/styles/routes/_home.scss
+++ b/public/styles/routes/_home.scss
@@ -63,7 +63,7 @@
   .button:focus {
     outline: 0;
   }
-//********************************** ACCORDIAN **********************************//
+//********************************** 'FIND' ACCORDIAN **********************************//
   button.accordion {
     color: $dark-grey ;
     background-color: transparent;
