--- a/public/styles/reference.scss
+++ b/public/styles/reference.scss
@@ -5,7 +5,9 @@
 //VIEWS
 @import "routes/login";
 @import "routes/home";
+@import "routes/adminHome";
 @import "routes/headerDirective";
+
 
 //FONTS
 @import url('https://fonts.googleapis.com/css?family=Pacifico');
