--- a/public/styles/routes/_home.scss
+++ b/public/styles/routes/_home.scss
@@ -14,200 +14,200 @@
 
   }
 
-  .title {
-    font-family: $font;
-    font-size: 50px;
-    color: $off-white;
-    line-height: 40px;
-  }
-
-  .bottom-line {
-    @include wxh(250px, 50px);
-    border-bottom: 2px solid $off-white;
-    margin-bottom: 15px;
-  }
-
-  .input-container {
-    @include flex(center, center);
-    @include wxh(500px, 53px);
-    // background-color: tomato;
-    margin-bottom: 20px;
-    overflow: hidden;
-    display: inline-flex;
-  }
-
-  input {
-    @include input();
-    margin-top: 0;
-  }
-
-  i {
-    font-size: 28px;
-    vertical-align: middle;
-    margin-bottom: 3px;
-    margin-left: 14px;
-  }
-
-  .button {
-    display: inline-block;
-    width: 130px;
-    @include button-maker($green, $off-white);
-    font-size: 20px;
-    padding-left: 14px;
-  }
-
-  .button:hover {
-    background-color: $light-green;
-  }
-
-  .button:focus {
-    outline: 0;
-  }
-//********************************** 'FIND' ACCORDIAN **********************************//
-  button.accordion {
-    color: $dark-grey ;
-    background-color: transparent;
-    cursor: pointer;
-    width: 250px;
-    border: none;
-    text-align: left;
-    outline: none;
-    font-size: 50px;
-    transition: 0.2s;
-    @include wxh(250px, 50px);
-    border-bottom: 2px solid $off-white;
-    margin-bottom: 15px;
-    line-height: 48px;
-  }
-
-  button.accordion.active, button.accordion:hover {
-    color: $green;
-  }
-
-  .panel {
-    background-color: $off-white;
-    max-height: 0;
-    overflow: hidden;
-    display: inline-flex;
-    transition: max-height 0.2s ease-out;
-  }
-  //********************************** MODAL **********************************//
-  // MODAL
-
-  .modal-bg {
-    display: none;
-    position: absolute;
-    height: 100vh;
-    width: 100%;
-    top: 0;
-    left: 0;
-    z-index: 1;
-    background-color: rgba(0, 0, 0, .85);
-
-    @include flex(center, center);
-    flex-direction: column;
-  }
-////////MAKING X///////////
-  .left {
-    z-index: 3;
-    width: 2px;
-    height: 50px;
-    background-color: $off-white;
-    position: absolute;
-    cursor: pointer;
-    transform: rotate(45deg);
-  }
-
-  .right {
-    z-index: 4;
-    width: 2px;
-    height: 50px;
-    background-color: $off-white;
-    position: absolute;
-    cursor: pointer;
-    transform: rotate(-45deg);
-  }
-
-
-  //CONTENT
-  .modal-content {
-    display: inline-block;
-    z-index: 4;
-    position: relative;
-    max-width: 92vw;
-    margin: 4vh 4vw;
-    margin-top: 60px;
-    background-color: #fefefe;
-    margin: auto;
-    padding: 0;
-    -webkit-animation-name: animatetop;
-    -webkit-animation-duration: 0.4s;
-    animation-name: animatetop;
-    animation-duration: 0.4s;
-  }
-
-  .close-container {
-    height: 50px;
-    position: relative;
-    @include flex(flex-end, center);
-    -webkit-animation-name: animatetop;
-    -webkit-animation-duration: 0.4s;
-    animation-name: animatetop;
-    animation-duration: 0.4s;
-  }
-
-  .x-box {
-    // z-index: 2;
-    @include wxh(50px, 50px);
-    position: absolute;
-    bottom: 10px;
-    @include flex(center, center);
-    cursor: pointer;
-  }
-  //HEADER
-  .modal-header {
-      padding: 30px;
-      background-color: $off-white;
-      color: $off-black;
-      font-family: $font;
-      // font-weight:bold;
-      font-size: 30px;
-      // text-transform: uppercase;
-      text-align: center;
-  }
-
-  //BODY
-  .modal-body {
-    color: #333;
-    font-family: $font;
-    font-size: 15px;
-    text-align: center;
-    line-height: 23px;
-    border-bottom: 2px solid blue;
-    border-top: 2px solid blue;
-    background: $off-white;
-    padding: 30px;
-  }
-
-  //FOOTER
-  .modal-footer {
-    padding: 30px;
-    background-color: $gold;
-    @include flex(center, center);
-  }
-
-  .employee-photo {
-    display: inline-block;
-    width: 150px;
-    max-height: 150px;
-    border-radius: 50%;
-    margin: 0 10px 0 10px;
-    overflow: hidden;
-  }
-
-  .employee-photo img {
-    max-width: 100%;
-  }
+//   .title {
+//     font-family: $font;
+//     font-size: 50px;
+//     color: $off-white;
+//     line-height: 40px;
+//   }
+//
+//   .bottom-line {
+//     @include wxh(250px, 50px);
+//     border-bottom: 2px solid $off-white;
+//     margin-bottom: 15px;
+//   }
+//
+//   .input-container {
+//     @include flex(center, center);
+//     @include wxh(500px, 53px);
+//     // background-color: tomato;
+//     margin-bottom: 20px;
+//     overflow: hidden;
+//     display: inline-flex;
+//   }
+//
+//   input {
+//     @include input();
+//     margin-top: 0;
+//   }
+//
+//   i {
+//     font-size: 28px;
+//     vertical-align: middle;
+//     margin-bottom: 3px;
+//     margin-left: 14px;
+//   }
+//
+//   .button {
+//     display: inline-block;
+//     width: 130px;
+//     @include button-maker($green, $off-white);
+//     font-size: 20px;
+//     padding-left: 14px;
+//   }
+//
+//   .button:hover {
+//     background-color: $light-green;
+//   }
+//
+//   .button:focus {
+//     outline: 0;
+//   }
+// //********************************** 'FIND' ACCORDIAN **********************************//
+//   button.accordion {
+//     color: $dark-grey ;
+//     background-color: transparent;
+//     cursor: pointer;
+//     width: 250px;
+//     border: none;
+//     text-align: left;
+//     outline: none;
+//     font-size: 50px;
+//     transition: 0.2s;
+//     @include wxh(250px, 50px);
+//     border-bottom: 2px solid $off-white;
+//     margin-bottom: 15px;
+//     line-height: 48px;
+//   }
+//
+//   button.accordion.active, button.accordion:hover {
+//     color: $green;
+//   }
+//
+//   .panel {
+//     background-color: $off-white;
+//     max-height: 0;
+//     overflow: hidden;
+//     display: inline-flex;
+//     transition: max-height 0.2s ease-out;
+//   }
+//   //********************************** MODAL **********************************//
+//   // MODAL
+//
+//   .modal-bg {
+//     display: none;
+//     position: absolute;
+//     height: 100vh;
+//     width: 100%;
+//     top: 0;
+//     left: 0;
+//     z-index: 1;
+//     background-color: rgba(0, 0, 0, .85);
+//
+//     @include flex(center, center);
+//     flex-direction: column;
+//   }
+// ////////MAKING X///////////
+//   .left {
+//     z-index: 3;
+//     width: 2px;
+//     height: 50px;
+//     background-color: $off-white;
+//     position: absolute;
+//     cursor: pointer;
+//     transform: rotate(45deg);
+//   }
+//
+//   .right {
+//     z-index: 4;
+//     width: 2px;
+//     height: 50px;
+//     background-color: $off-white;
+//     position: absolute;
+//     cursor: pointer;
+//     transform: rotate(-45deg);
+//   }
+//
+//
+//   //CONTENT
+//   .modal-content {
+//     display: inline-block;
+//     z-index: 4;
+//     position: relative;
+//     max-width: 92vw;
+//     margin: 4vh 4vw;
+//     margin-top: 60px;
+//     background-color: #fefefe;
+//     margin: auto;
+//     padding: 0;
+//     -webkit-animation-name: animatetop;
+//     -webkit-animation-duration: 0.4s;
+//     animation-name: animatetop;
+//     animation-duration: 0.4s;
+//   }
+//
+//   .close-container {
+//     height: 50px;
+//     position: relative;
+//     @include flex(flex-end, center);
+//     -webkit-animation-name: animatetop;
+//     -webkit-animation-duration: 0.4s;
+//     animation-name: animatetop;
+//     animation-duration: 0.4s;
+//   }
+//
+//   .x-box {
+//     // z-index: 2;
+//     @include wxh(50px, 50px);
+//     position: absolute;
+//     bottom: 10px;
+//     @include flex(center, center);
+//     cursor: pointer;
+//   }
+//   //HEADER
+//   .modal-header {
+//       padding: 30px;
+//       background-color: $off-white;
+//       color: $off-black;
+//       font-family: $font;
+//       // font-weight:bold;
+//       font-size: 30px;
+//       // text-transform: uppercase;
+//       text-align: center;
+//   }
+//
+//   //BODY
+//   .modal-body {
+//     color: #333;
+//     font-family: $font;
+//     font-size: 15px;
+//     text-align: center;
+//     line-height: 23px;
+//     border-bottom: 2px solid blue;
+//     border-top: 2px solid blue;
+//     background: $off-white;
+//     padding: 30px;
+//   }
+//
+//   //FOOTER
+//   .modal-footer {
+//     padding: 30px;
+//     background-color: $gold;
+//     @include flex(center, center);
+//   }
+//
+//   .employee-photo {
+//     display: inline-block;
+//     width: 150px;
+//     max-height: 150px;
+//     border-radius: 50%;
+//     margin: 0 10px 0 10px;
+//     overflow: hidden;
+//   }
+//
+//   .employee-photo img {
+//     max-width: 100%;
+//   }
 
 
 
