--- a/public/styles/routes/_adminHome.scss
+++ b/public/styles/routes/_adminHome.scss
@@ -1,4 +1,8 @@
-button.accordion {
+.center-container {
+  height: auto;
+}
+
+.butt.admin-accordion {
     background-color: #eee;
     color: #444;
     cursor: pointer;
@@ -11,11 +15,19 @@ button.accordion {
     transition: 0.4s;
 }
 
-button.accordion.active, button.accordion:hover {
+.butt.admin-accordion.active, .butt.admin-accordion:hover {
     background-color: #ddd;
 }
 
-div.panel {
+div.panel1 {
+    display: inline-flex;
+    background-color: white;
+    max-height: 100px;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+}
+
+div.panel2 {
     padding: 0 18px;
     background-color: white;
     max-height: 0;
