--- a/public/styles/routes/_adminHome.scss
+++ b/public/styles/routes/_adminHome.scss
@@ -3,26 +3,44 @@
 }
 
 .butt.admin-accordion {
-    background-color: #eee;
-    color: #444;
-    cursor: pointer;
-    padding: 18px;
     width: 100%;
-    border: none;
-    text-align: left;
+    background: $off-black;
+    color: $off-white;
+    font-size: 35px;
+    font-family: $font;
+    text-align: center;
+    border: 1px solid $off-white;
+    border-bottom: 0;
     outline: none;
-    font-size: 15px;
-    transition: 0.4s;
+    padding: 20px;
+    cursor: pointer;
+    transition: 0.2s;
 }
 
-.butt.admin-accordion.active, .butt.admin-accordion:hover {
-    background-color: #ddd;
+.butt.admin-accordion.active:first-child, .butt.admin-accordion:hover:first-child{
+
+  background-color: red;
 }
+
+.butt.admin-accordion.active:nth-child(3), .butt.admin-accordion:hover:nth-child(3) {
+
+  background-color: blue;
+}
+
+.butt.admin-accordion.active:nth-child(4), .butt.admin-accordion:hover:nth-child(4) {
+
+  background-color: salmon;
+}
+.butt.admin-accordion.active:nth-child(6), .butt.admin-accordion:hover:nth-child(6) {
+
+  background-color: darkseagreen;
+}
+
 
 div.panel1 {
     display: inline-flex;
     background-color: white;
-    max-height: 100px;
+    max-height: 0;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
 }
