changed border color

--- a/public/styles/routes/_adminHome.scss
+++ b/public/styles/routes/_adminHome.scss
@@ -15,7 +15,7 @@
     font-size: 35px;
     font-family: $font;
     text-align: center;
-    border: 1px solid $off-white;
+    border: 1px solid $dark-grey;
     border-bottom: 0;
     outline: none;
     padding: 20px;
