--- a/public/styles/routes/_adminHome.scss
+++ b/public/styles/routes/_adminHome.scss
@@ -4,12 +4,14 @@
 
 .button {
   border: 1px solid $off-white;
-  border-bottom: 0;
+}
+
+.no-cursor {
+  cursor: none;
 }
 
 .butt.admin-accordion {
     width: 100%;
-    // background: $dark-grey;
     background: $off-black;
     color: $off-white;
     font-size: 35px;
