started media queries

--- a/public/styles/reference.scss
+++ b/public/styles/reference.scss
@@ -6,7 +6,10 @@
 @import "routes/login";
 @import "routes/home";
 @import "routes/adminHome";
+
+//DIRECTIVES
 @import "routes/headerDirective";
+
 
 
 //FONTS
