--- a/public/styles/routes/_login.scss
+++ b/public/styles/routes/_login.scss
@@ -1,3 +1,257 @@
+// .all {
+//   position: relative;
+//   -webkit-font-smoothing: antialiased;
+//   margin: 0;
+//   padding: 0;
+//   box-sizing: border-box;
+//
+//
+//   .overlay {
+//     position: relative;
+//     width: 100%;
+//     height: 100vh;
+//     background: rgba(0, 0, 0, .65);
+//   }
+//   .background {
+//     position: absolute;
+//     width: 100vw;
+//     // height: 100%;
+//     @include image('../../../images/login.jpg');
+//     // @include flex(center, center);
+//   }
+//   /////////////////////////// LOGIN ///////////////////////////
+//   .login {
+//     @include flex(flex-start, center);
+//     width: 550px;
+//     height: 50px;
+//     background-color: $green;
+//     color: $off-white;
+//     float: right;
+//     padding-left: 5px;
+//   }
+//
+//   .header-input {
+//     @include wxh(200px, 25px);
+//     font-family: $font;
+//     font-size: 15px;
+//     background-color: $off-white;
+//     color: $off-black;
+//     border: 0px solid;
+//     outline: none;
+//     text-indent: 10px;
+//     margin: 10px;
+//   }
+//
+//   .header-input::-webkit-input-placeholder {
+//     color: $green !important;
+//     font-size: 12px;
+//   }
+//
+//   .header-input:-moz-placeholder { /* Firefox 18- */
+//     color: $green !important;
+//     font-size: 12px;
+//   }
+//
+//   .header-input::-moz-placeholder {  /* Firefox 19+ */
+//     color: $green !important;
+//     font-size: 12px;
+//   }
+//
+//   .header-input:-ms-input-placeholder {
+//     color: $green !important;
+//     font-size: 12px;
+//   }
+//
+//   .header-button {
+//     @include wxh(80px, 35px);
+//     @include button-maker($blue, #fff);
+//     margin-left: 10px;
+//     margin-top: 0px;
+//     text-indent: 0px;
+//   }
+//
+//   .header-button:hover {
+//     background-color: $lightblue;
+//   }
+//
+//   /////////////////////////// LEFT ///////////////////////////
+//   .title {
+//     font-family: $cursive;
+//     font-size: 70px;
+//     text-align: center;
+//     color: $off-white;
+//     margin-bottom: 15px;
+//     margin-right: 30px;
+//   }
+//
+//   .logo {
+//     @include image('../../../images/logo-off-white.png');
+//     @include wxh(100px, 58px);
+//     margin-left: 156px;
+//   }
+//
+//   .description {
+//     @include wxh(100%, auto);
+//     font-family: $font;
+//     font-size: 50px;
+//     color: $off-white;
+//     width: 92%;
+//     line-height: 63px;
+//     margin-top: 15px;
+//     margin-right: 32px;
+//   }
+//   /////////////////////////// RIGHT ///////////////////////////
+//   .right-title {
+//     font-family: $font;
+//     color: $off-white;
+//     font-size: 30px;
+//     margin-bottom: 15px;
+//     margin-left: 20px;
+//   }
+//
+//   form {
+//     margin-left: 20px;
+//   }
+//
+//   input {
+//     @include input();
+//   }
+//
+//   button {
+//     @include wxh(195px, 50px);
+//     @include button-maker ($green, #fff);
+//     font-size: 20px;
+//     margin-top: 25px;
+//   }
+//
+//   button:hover {
+//     background-color: $light-green;
+//   }
+//
+//   button:focus {
+//     outline: 0;
+//   }
+//   /////////////////////////// LAYOUT ///////////////////////////
+//   .container {
+//     position: relative;
+//     @include flex(center, center);
+//     width: 90%;
+//     height: 90%;
+//     margin: 0 auto;
+//     // background-color: darkslateblue;
+//   }
+//
+//   .block-left {
+//     display: inline-block;
+//     @include wxh(auto, 445px);
+//     margin-top: 20px;
+//   }
+//
+//   .block-right {
+//     display: inline-block;
+//     @include wxh(auto, 445px);
+//     margin-top: 20px;
+//   }
+//
+//   .divider-block {
+//     display: inline-block;
+//     @include wxh(440px, 445px);
+//     width: 160px;
+//     margin: 30px;
+//     background-color: salmon;
+//   }
+//
+//   .title-logo-box {
+//     @include wxh(100%, auto);
+//     display: inline-block;
+//     // background: $gold;
+//   }
+//
+//   .description-box {
+//     @include wxh(440px, auto);
+//     @include flex(center, center);
+//     margin-top: 15px;
+//     // background-color: orangered;
+//   }
+//
+// /////////////////////////// MEDIA QUERIES ///////////////////////////
+// //RIGHT AND LEFT LAYOUTS
+//   @media (min-width: 1371px) {
+//     #more {
+//       display: none;
+//     }
+//   }
+//
+//   @media (max-width: 1370px) {
+//     #more {
+//       display: none;
+//     }
+//     .divider-block {
+//       width: 100px;
+//       margin: 20px;
+//       // background-color: red;
+//     }
+//   }
+//   @media (max-width: 1200px) {
+//     #more {
+//       display: none;
+//     }
+//     .divider-block {
+//       width: 50px;
+//       margin: 10px;
+//     }
+//   }
+//   @media (max-width: 950px) {
+//     .container {
+//       display: inline-block;
+//     }
+//
+//   //   #more {
+//   //     height: 700px;
+//   //     background-color: black;
+//   //   }
+//   //   .background {
+//   //     height: 100vh;
+//   //   }
+//   //   .container {
+//   //     position: relative;
+//   //     flex-wrap: wrap;
+//   //     @include flex(center, center);
+//   //     width: 90%;
+//   //     height: 100%;
+//   //     margin: auto;
+//   //     top: 50px;
+//   //     background-color: darkslateblue;
+//   //
+//   //   }
+//     .divider-block {
+//       display: none;
+//     }
+//   //   .title {
+//   //     margin-right: 0;
+//   //   }
+//   //   .logo {
+//   //     margin-left: 168px;
+//   //   }
+//     .block-left {
+//       background-color: green;
+//       @include flex(center, none);
+//       flex-direction: column;
+//       width: 440px;
+//     }
+//
+//     .block-right {
+//       background-color: darkblue;
+//       @include flex(center, none);
+//       flex-direction: column;
+//       width: 440px;
+//     }
+//   //   .description {
+//   //     margin-right: 0px;
+//   //   }
+//   }
+// }
+
 .all {
   position: relative;
   -webkit-font-smoothing: antialiased;
@@ -106,6 +360,11 @@
     color: $off-white;
     font-size: 30px;
     margin-bottom: 15px;
+    margin-left: 20px;
+  }
+
+  form {
+    margin-left: 20px;
   }
 
   input {
@@ -136,9 +395,15 @@
     // background-color: darkslateblue;
   }
 
-  .block {
+  .block-left {
     display: inline-block;
-    @include wxh(440px, 445px);
+    @include wxh(auto, 445px);
+    margin-top: 20px;
+  }
+
+  .block-right {
+    display: inline-block;
+    @include wxh(auto, 445px);
     margin-top: 20px;
   }
 
@@ -147,7 +412,7 @@
     @include wxh(440px, 445px);
     width: 160px;
     margin: 30px;
-    // background-color: salmon;
+    background-color: salmon;
   }
 
   .title-logo-box {
@@ -165,18 +430,95 @@
 
 /////////////////////////// MEDIA QUERIES ///////////////////////////
 //RIGHT AND LEFT LAYOUTS
+  @media (min-width: 1371px) {
+    #horizontal{
+      display: inline;
+    }
+    #vertical {
+      display: none;
+    }
+  }
+//***************************************
   @media (max-width: 1370px) {
+    #horizontal{
+      display: inline;
+    }
+    #vertical {
+      display: none;
+    }
     .divider-block {
       width: 100px;
       margin: 20px;
       // background-color: red;
     }
   }
+//***************************************
   @media (max-width: 1200px) {
+    #horizontal{
+      display: inline;
+    }
+    #vertical{
+      display: none;
+    }
     .divider-block {
       width: 50px;
-      margin: 20px;
+      margin: 10px;
     }
   }
+//***************************************
+  @media (max-width: 950px) {
+    #horizontal{
+      display: none;
+    }
+    #vertical {
+      display: inline;
+    }
+    .container {
+      @include wxh(100%, 100%);
+    }
 
+  //   #more {
+  //     height: 700px;
+  //     background-color: black;
+  //   }
+  //   .background {
+  //     height: 100vh;
+  //   }
+  //   .container {
+  //     position: relative;
+  //     flex-wrap: wrap;
+  //     @include flex(center, center);
+  //     width: 90%;
+  //     height: 100%;
+  //     margin: auto;
+  //     top: 50px;
+  //     background-color: darkslateblue;
+  //
+  //   }
+    .divider-block {
+      display: none;
+    }
+  //   .title {
+  //     margin-right: 0;
+  //   }
+  //   .logo {
+  //     margin-left: 168px;
+  //   }
+    .block-left {
+      background-color: green;
+      @include flex(center, none);
+      flex-direction: column;
+      height: auto;
+
+    .block-right {
+      background-color: darkblue;
+      @include flex(center, none);
+      flex-direction: column;
+      width: 410px;
+    }
+  //   .description {
+  //     margin-right: 0px;
+  //   }
+  }
+}
 }
