--- a/public/styles/routes/_login.scss
+++ b/public/styles/routes/_login.scss
@@ -13,6 +13,7 @@
     background: rgba(0, 0, 0, .65);
   }
   .background {
+    background-color: $off-black;
     position: absolute;
     width: 100vw;
     // height: 100%;
@@ -82,13 +83,13 @@
     text-align: center;
     color: $off-white;
     margin-bottom: 15px;
-    margin-right: 30px;
+    // margin-right: 30px;
   }
 
   .logo {
     @include image('../../../images/logo-off-white.png');
     @include wxh(100px, 58px);
-    margin-left: 156px;
+    margin-left: 169px;
   }
 
   .description {
@@ -99,7 +100,7 @@
     width: 92%;
     line-height: 63px;
     margin-top: 15px;
-    margin-right: 32px;
+    // margin-right: 32px;
   }
   /////////////////////////// RIGHT ///////////////////////////
   .right-title {
@@ -158,7 +159,7 @@
     @include wxh(440px, 445px);
     width: 160px;
     margin: 30px;
-    background-color: salmon;
+    // background-color: salmon;
   }
 
   .title-logo-box {
@@ -219,54 +220,69 @@
     #vertical {
       display: inline;
     }
-    .container {
-      @include wxh(none, none);
-    }
-
-
-
-  //   #more {
-  //     height: 700px;
-  //     background-color: black;
-  //   }
-  //   .background {
-  //     height: 100vh;
-  //   }
-  //   .container {
-  //     position: relative;
-  //     flex-wrap: wrap;
-  //     @include flex(center, center);
-  //     width: 90%;
-  //     height: 100%;
-  //     margin: auto;
-  //     top: 50px;
-  //     background-color: darkslateblue;
-  //
-  //   }
-    .divider-block {
-      display: none;
-    }
-  //   .title {
-  //     margin-right: 0;
-  //   }
-  //   .logo {
-  //     margin-left: 168px;
-  //   }
-    .block-left {
-      background-color: green;
-      @include flex(center, none);
-      flex-direction: column;
-      height: auto;
-
-    .block-right {
-      background-color: darkblue;
-      @include flex(center, none);
-      flex-direction: column;
-      width: 410px;
-    }
-  //   .description {
-  //     margin-right: 0px;
-  //   }
+    // .container {
+    //   @include wxh(none, none);
+    // }
+    //
+    // .divider-block {
+    //   display: none;
+    // }
+    //
+    // .block-left {
+    //   // background-color: green;
+    //   @include flex(center, none);
+    //   flex-direction: column;
+    //   height: auto;
+    // }
+    //
+    // .block-right {
+    //   background-color: $blue;
+    //   @include flex(center, none);
+    //   flex-direction: column;
+    //   @include wxh(500px, 540px);
+    //   padding-left: 45px;
+    // }
+    //
+    // .background2 {
+    //   background-color: $off-black;
+    //   width: 100%;
+    // }
   }
-}
+  //***************************************
+    @media (max-width: 550px) {
+      #horizontal{
+        display: none;
+      }
+      form {
+        margin-left: 0px;
+      }
+      .login {
+        display: none;
+      }
+      .block-left {
+        position: absolute;
+        top: 45px;
+      }
+      .description {
+        font-size: 22px;
+        text-align: center;
+        padding-left: 7px;
+      }
+      .description-box {
+        margin-top: 0px;
+      }
+      .container {
+        @include flex(center, center);
+        @include wxh(100vw, 100%);
+        margin: 0 auto;
+      }
+      .block-right {
+        background-color: $blue;
+        @include flex(center, none);
+        flex-direction: column;
+        @include wxh(auto, auto);
+        padding: 45px;
+
+      }
+    }
 }
