--- a/public/styles/routes/_login.scss
+++ b/public/styles/routes/_login.scss
@@ -101,7 +101,7 @@
     line-height: 63px;
     margin-top: 15px;
     // margin-right: 32px;
-    background-color: darkseagreen;
+    // background-color: darkseagreen;
   }
   /////////////////////////// RIGHT ///////////////////////////
   .right-title {
@@ -109,7 +109,7 @@
     color: $off-white;
     font-size: 30px;
     margin-bottom: 15px;
-    background-color: grey;
+    // background-color: grey;
   }
 
   // form {
@@ -140,14 +140,14 @@
     @include flex(center, center);
     @include wxh(90%, 90%);
     margin: 0 auto;
-    background-color: darkslateblue;
+    // background-color: darkslateblue;
   }
 
   .block-left {
     display: inline-block;
     @include wxh(auto, 445px);
     margin-top: 20px;
-    background-color: $gold;
+    // background-color: $gold;
   }
 
   .block-right {
@@ -156,7 +156,7 @@
     justify-content: center;
     @include wxh(auto, 445px);
     // margin-top: 20px;
-    background-color: salmon;
+    // background-color: salmon;
   }
 
   .divider-block {
@@ -177,7 +177,7 @@
     @include wxh(440px, auto);
     @include flex(center, center);
     margin-top: 15px;
-    background-color: orangered;
+    // background-color: orangered;
   }
 
   // #vertical {
@@ -205,7 +205,7 @@
     .divider-block {
       width: 100px;
       margin: 20px;
-      background-color: red;
+      // background-color: red;
     }
   }
 //***************************************
@@ -234,12 +234,20 @@
       max-width: 950px;
       height: 100vh;
       background-color: #000;
+      position: relative;
+      @include flex(center, center);
+      margin: 0 auto;
+      // background-color: darkslateblue;
     }
 
     .divider-block {
       display: none;
     }
 
+    .overlay {
+      overflow-x:hidden;
+overflow-y:scroll;
+    }
 
 
 
