positioned in chrome

--- a/public/styles/routes/_login.scss
+++ b/public/styles/routes/_login.scss
@@ -208,7 +208,7 @@
     .divider-block {
       width: 100px;
       margin: 20px;
-      background-color: red;
+      // background-color: red;
     }
   }
 //***************************************
@@ -329,13 +329,61 @@
         width: auto;
         height: 150px;
       }
-
-
-
     }
+//***************************************
     @media (max-width: 440px) {
       #horizontal{
         display: none;
+      }
+      .login-vert {
+        top: 35px;
+      }
+      input {
+        width: 319px;
+        margin-top: 30px;
+      }
+      .header-button {
+        @include wxh(110px, 50px);
+        @include button-maker($green, #fff);
+        // border: 1px solid $off-white;
+        font-size: 20px;
+        margin-top: 30px;
+        margin-left: 0px;
+        padding-bottom: 4px;
+      }
+      .block-left {
+        position: absolute;
+        top: 45px;
+        width: 414px;
+      }
+      .title {
+        font-size: 53px;
+        text-align: center;
+        color: $off-white;
+        margin-left: 7px;
+      }
+      .logo {
+        margin-bottom: 17px;
+        @include wxh(75px, 44px);
+        margin-right: 160px;
+      }
+      .description-box {
+          width: 319px;
+          height: 56px;
+          margin: 0 auto;
+          margin-right: 37px;
+          // background-color: salmon;
+      }
+      .description {
+        font-size: 20px;
+        line-height: 23px;
+        text-align: center;
+        margin-right: 0px;
+      }
+      .bottom-links-vert {
+        bottom: 125px;
+        width: auto;
+        height: 150px;
       }
     }
 }
