--- a/public/styles/routes/_home.scss
+++ b/public/styles/routes/_home.scss
@@ -65,7 +65,7 @@
   }
 //********************************** 'FIND' ACCORDIAN **********************************//
   button.accordion {
-    color: $dark-grey ;
+    color: #8e8e8e;
     background-color: transparent;
     cursor: pointer;
     width: 250px;
@@ -195,6 +195,49 @@
     max-width: 100%;
   }
 
+  /////////////////////////// MEDIA QUERIES ///////////////////////////
+    @media (max-width: 550px) {
+      input {
+        width: 250px;
+      }
+      .center-container {
+        width: auto;
+      }
+      .input-container {
+        width: auto;
+        justify-content: flex-start;
+      }
+    }
+  //***************************************
 
+    @media (max-width: 450px) {
+      input {
+        @include input();
+        width: 210px;
+        height: 53px;
+        margin-top: 0;
+      }
+      i {
+        font-size: 18px;
+        vertical-align: middle;
+        margin-bottom: 3px;
+        margin-left: 8px;
+      }
+      .button {
+        // display: inline-block;
+        @include flex(center, center);
+        @include wxh(106px, 72%);
+        padding: 10px 5px 10px 8px;
+      }
+      .bottom-line {
+        width: 212px;
+      }
+      .panel {
+        align-items: center;
+      }
+      button.accordion {
+        width: 211px;
+      }
+    }
 
 }
