--- a/public/styles/routes/_home.scss
+++ b/public/styles/routes/_home.scss
@@ -213,18 +213,15 @@
     @media (max-width: 450px) {
       input {
         @include input();
-        width: 210px;
-        height: 53px;
+        @include wxh(210px, 53px);
         margin-top: 0;
       }
       i {
         font-size: 18px;
         vertical-align: middle;
-        margin-bottom: 3px;
-        margin-left: 8px;
+        margin: 0px 0px 3px 8px;
       }
       .button {
-        // display: inline-block;
         @include flex(center, center);
         @include wxh(106px, 72%);
         padding: 10px 5px 10px 8px;
