hide iphone header

--- a/public/styles/routes/_headerDirective.scss
+++ b/public/styles/routes/_headerDirective.scss
@@ -99,6 +99,11 @@
   }
 
   /////////////////////////// MEDIA QUERIES ///////////////////////////
+  @media (min-width: 935px) {
+    #iphone-header {
+      display:none;
+    }
+  }
     @media (max-width: 935px) {
       #iphone-header {
         display:none;
